--- a/style.scss
+++ b/style.scss
@@ -71,6 +71,7 @@ main{
             align-items: center;
             justify-content: space-between;
             margin-top: 20px;
+            flex-wrap: wrap;
 
             .button{
                 padding: 10px 25px;
@@ -98,6 +99,52 @@ main{
                 }
             }
             
+        }
+    }
+
+    .prices{
+        width: 100%;
+        padding: 40px 60px;
+        background-color: #ffffff;
+        text-align:center;
+        border-radius: 10px;
+        margin: 20px 0;
+        
+        .price{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            .content{
+                padding: 20px;
+                border-right: 1px solid hsl(0, 0%, 48%);
+                color: hsl(0, 0%, 48%);
+                font-size: 14px;
+
+                span{
+                    font-family: 18px;
+                    font-weight: 700;
+                    font-size: 23px;
+                    color: hsl(0, 0, 0);
+                }
+            }
+        }
+        .loder{
+            width: 100%;
+            height: 10px;
+            background: hsl(0, 0%, 48%);
+            border-radius: 20px;
+            margin: 20px 0;
+            position: relative;
+        }
+        .loder::before{
+            position: absolute;
+            content: "";
+            width: 80%;
+            height: 10px;
+            left: 0;
+            border-radius: 20px;
+            background-color: hsl(176, 50%, 47%);
         }
     }
 }
