--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,16 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bai+Jamjuree:ital,wght@0,500;0,600;0,700;1,400&family=Bebas+Neue&family=Commissioner:wght@400;500;700&family=DM+Serif+Display&family=Fredoka+One&family=Inter:wght@400;500;700&family=Karla:wght@400;700&family=Overpass:wght@400;700&family=Poppins:wght@400;500;600;700&family=Rubik+Gemstones&family=Rubik+Vinyl&family=Signika:wght@500&family=Space+Grotesk:wght@500;700&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Commissioner;
 }
 body{
     background: #FAFAFA;
+    position: relative;
 }
 
 main{
@@ -14,6 +20,19 @@ main{
     background-position:center;
     background-size: cover;
     background-repeat: no-repeat;
+
+    .ham{
+       opacity: 0;
+        position: fixed;
+        right: 10%;
+        top: 9%;
+    }
+    .closeMenu{
+        opacity: 0;
+        position: fixed;
+        right: 10%;
+        top: 9%;
+    }
 
     .navBar{
         display: flex;
@@ -26,19 +45,30 @@ main{
         img{
             cursor: pointer;
         }
+        
 
-        ul{
-            display: flex;
+        .links{
             
-           
-            li{
-                list-style: none;
-                margin: 0 12px;
-                color: hsl(0, 0, 100%);
-                font-size: 16px;
-                cursor: pointer;
+            .closeMenu{
+                display: none;
+            }
+            ul{
+                display: flex;
+                
+               
+                li{
+                    list-style: none;
+                    margin: 0 12px;
+                    color: hsl(0, 0, 100%);
+                    font-size: 16px;
+                    cursor: pointer;
+                }
+                li:hover{
+                    color: hsl(0, 2%, 80%);
+                }
             }
         }
+        
     }
 }
 .page{
@@ -81,6 +111,16 @@ main{
                 border-radius: 20px;
                 cursor: pointer;
             }
+            .button:hover{
+                background: hsl(175, 50%, 21%);
+            }
+            .button2:hover{
+                background: hsl(0, 0%, 75%);
+                p{
+                    font-size: 0.9rem;
+                }
+                
+            }
             .button2{
                 background: hsl(0, 0%, 48%);
                 width: 120px;
@@ -95,7 +135,8 @@ main{
                 p{
                     color: hsl(0, 0, 0);
                     font-size: 14px;
-                    margin-left: 5px;
+                    margin-right: 10px;
+                    
                 }
             }
             
@@ -116,8 +157,7 @@ main{
             justify-content: space-between;
 
             .content{
-                padding: 20px;
-                border-right: 1px solid hsl(0, 0%, 48%);
+                padding: 20px; 
                 color: hsl(0, 0%, 48%);
                 font-size: 14px;
 
@@ -127,6 +167,10 @@ main{
                     font-size: 23px;
                     color: hsl(0, 0, 0);
                 }
+            }
+            hr{
+                background: hsl(0, 0%, 48%);
+                border: 5px;
             }
         }
         .loder{
@@ -147,4 +191,363 @@ main{
             background-color: hsl(176, 50%, 47%);
         }
     }
+    .about{
+        width: 100%;
+        padding: 40px 60px;
+        background-color: #ffffff;
+        text-align:left;
+        border-radius: 10px;
+        margin: 20px 0;
+        h1{
+            font-weight:700;
+        }
+        p{
+            margin-top: 15px;
+            padding-right: 15px;
+            font-weight: 400;
+            color: hsl(0, 0%, 48%);
+            line-height: 2.5em;
+
+        }
+
+        .bambooStand{
+            width: 100%;
+            padding: 20px;
+            border-radius: 5px;
+            border: 1px solid hsl(0, 0%, 48%);
+            margin-top: 25px;
+
+            article{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                p{
+                    color: hsl(176, 50%, 47%);
+                }
+            }
+            p{
+                margin: 20px 0;
+            }
+            h2{
+                display: flex;
+                align-items: center;
+                span{
+                    margin-left: 5px;
+                    font-size: 12px;
+                    color: hsl(0, 0%, 48%);
+                }
+            }
+            button{
+                color: white;
+                padding: 15px 20px;
+                background: hsl(176, 50%, 47%);
+                border: none;
+                border-radius: 50px;
+                cursor: pointer;
+            }
+            button:hover{
+                background: hsl(175, 50%, 21%);
+            }
+            .fade{
+                color: hsl(0, 0%, 48%);
+                p{
+                    color: hsl(176, 31%, 61%);
+                }
+            }
+            .fadeBtn{
+                background: hsl(0, 0%, 48%);
+            }
+        }
+    }
+    
+}
+// Selection modal start
+.modal-ctn{
+    display: none;
+}
+.modal-ctn .buy{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(125, 125, 125, 0.327);
+    display: flex;
+    // align-items: center;
+    justify-content: center;
+    z-index: 98;
+    .modal{
+        width: 70%;
+        padding: 40px 60px;
+        // min-height: 75%;
+        max-height: 62%;
+        background-color: #ffffff;
+        text-align:left;
+        border-radius: 10px;
+        margin-top: 150px;
+        article{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+        .bambooStand{
+            width: 100%;
+            padding: 20px;
+            border-radius: 5px;
+            border: 1px solid hsl(0, 0%, 48%);
+            margin-top: 25px;
+            label{
+                display: flex;
+                cursor: pointer;
+                width: 100%;
+                input{
+                    margin-right: 10px;
+                }
+
+                article{
+                    display: flex;
+                    justify-content: space-between;
+                    // align-items: center;
+                    width: 100%;
+                    
+    
+                    p{
+                        color: hsl(176, 50%, 47%);
+                    }
+                    
+                }
+                
+            }
+            .Success{
+                display: none;
+            }
+            .Success .open{
+                width: 100%;
+                border-top: 1px solid hsl(0, 0%, 48%);
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                input{
+                    padding: 13px 20px;
+                    width: 80px;
+                    border-radius: 50px;
+                    border: 1px solid hsl(0, 0%, 48%);
+                    outline: none;
+                }
+            }
+
+            
+            p{
+                margin: 20px 0;
+            }
+            h2{
+                display: flex;
+                align-items: center;
+                span{
+                    margin-left: 5px;
+                    font-size: 12px;
+                    color: hsl(0, 0%, 48%);
+                }
+            }
+            button{
+                color: white;
+                padding: 15px 20px;
+                background: hsl(176, 50%, 47%);
+                border: none;
+                border-radius: 50px;
+                cursor: pointer;
+            }
+            button:hover{
+                background: hsl(175, 50%, 21%);
+            }
+            .fade{
+                color: hsl(0, 0%, 48%);
+                p{
+                    color: hsl(176, 31%, 61%);
+                }
+            }
+            .fadeBtn{
+                background: hsl(0, 0%, 48%);
+            }
+        }
+    }
+
+}
+// Selection modal end
+
+//Success modal end
+.modal2{
+    display: none;
+}
+.modal2 .complet{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(125, 125, 125, 0.327);
+    display: flex;
+    // align-items: center;
+    justify-content: center;
+    z-index: 99;
+
+    .gotIt{
+        width: 400px;
+        height: 300px;
+        padding: 5PX 20PX;
+        margin-top: 150px;
+        background-color: #ffffff;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        
+        h2{
+            margin: 10px 0;
+        }
+        p{
+            margin: 20px;
+            color: hsl(0, 0%, 48%);
+        }
+        button{
+            color: white;
+            padding: 15px 20px;
+            background: hsl(176, 50%, 47%);
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            font-size: 18px;
+        }
+            button:hover{
+                background: hsl(175, 50%, 21%);
+            }
+        
+    }
+}
+@media(min-width:431px) {
+        .ham{
+            position: fixed;
+            right: 10%;
+            top: 9%;
+        }
+     .closeMenu{
+         position: fixed;
+         right: 10%;
+         top: 9%;
+     }
+}
+@media(max-width:500px){
+    .navBar{
+        
+        .links{
+            display: none;
+            position: fixed;
+            background: hsl(176, 50%, 47%);
+            border-radius: 10px;
+            width: 80%; 
+            top: 20%;
+            // right: 20%;
+            text-align: center;
+            z-index: 2;
+            transition: all 0.5s ease;
+            padding: 10px;
+            margin: auto;
+            
+    
+            ul{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                .midull{
+                    border-top: 1px solid hsl(0, 0%, 48%);
+                    border-bottom: 1px solid hsl(0, 0%, 48%);
+                }
+                li{
+                    width: 90%;
+                    padding: 20px 0;
+                    color: black;
+                    text-align: left;
+                }
+            }
+           
+        }
+    
+    }
+    .page{
+        width: 95%;
+        .prices{
+            padding: 40px 20px;
+            .price{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                flex-direction: column;
+            }
+        }
+        .intro{
+            h1{
+                font-size: 1.5rem;
+            }
+            .buttons{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                .button2{
+                    width: 45px;
+                    border-radius: 50%;
+                    margin-left: 10px;
+                    img{
+                        width: 100%;
+                    }
+                    p{
+                        display: none;
+                    }
+                }
+            }
+        }
+        .about{
+            padding: 40px 20px;
+            h2{
+                font-size: 1.5rem;
+            }
+            .bambooStand{
+                article{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                }
+            }
+        }
+        
+    }
+    .modal-ctn{
+        .modal{
+            width: 95%;
+            padding: 40px 20px;
+            height: 47%;
+
+
+            label{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+
+                input{
+                    margin-bottom: 10px;
+                }
+                article{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    justify-content: none;
+                }
+            }
+            
+        }
+    }
+    
 }
