--- a/style.scss
+++ b/style.scss
@@ -263,20 +263,21 @@ main{
     
 }
 // Selection modal start
-.modal-ctn{
-    display: none;
-}
-.modal-ctn .buy{
+// .modal-ctn{
+//     display: none;
+// }
+.modal-ctn {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(125, 125, 125, 0.327);
-    display: flex;
+    display: none;
     // align-items: center;
     justify-content: center;
     z-index: 98;
+    transition: all 1s;
     .modal{
         width: 70%;
         padding: 40px 60px;
@@ -292,7 +293,7 @@ main{
             justify-content: space-between;
             margin-bottom: 10px;
         }
-        .bambooStand{
+        .bambooStand1{
             width: 100%;
             padding: 20px;
             border-radius: 5px;
@@ -320,13 +321,11 @@ main{
                 }
                 
             }
-            .Success{
-                display: none;
-            }
-            .Success .open{
+            
+            .Successful{
                 width: 100%;
                 border-top: 1px solid hsl(0, 0%, 48%);
-                display: flex;
+                display: none;
                 flex-direction: column;
                 align-items: center;
                 input{
@@ -378,17 +377,15 @@ main{
 // Selection modal end
 
 //Success modal end
+
 .modal2{
-    display: none;
-}
-.modal2 .complet{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(125, 125, 125, 0.327);
-    display: flex;
+    display: none;
     // align-items: center;
     justify-content: center;
     z-index: 99;
